--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylos2.css" />
+    <link rel="stylesheet" href="./stylos.css" />
     <title>Google</title>
   </head>
   <body>
@@ -12,7 +12,11 @@
         <ul class="accesos__list">
           <li class="accesos__items">
             <a class="accesos__links" href="">Gmail</a>
+          </li>
+          <li class="accesos__items">
             <a class="accesos__links" href="">Imágen</a>
+          </li>
+          <li class="accesos__items">
             <a class="accesos__links" href="">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -27,6 +31,8 @@
                 />
               </svg>
             </a>
+          </li>
+          <li class="accesos__items">
             <div class="accesos__items-image">
               <span></span>
             </div>
@@ -34,47 +40,91 @@
         </ul>
       </nav>
     </header>
-    <!-- <section class="hero">
-      <article class="hero_title">
-        <span>G</span>
-        <span>o</span>
-        <span>o</span>
-        <span>g</span>
-        <span>l</span>
-        <span>e</span>
+    <section class="hero">
+      <article class="hero__title">
+        <span class="one">G</span>
+        <span class="two">o</span>
+        <span class="three">o</span>
+        <span class="four">g</span>
+        <span class="five">l</span>
+        <span class="six">e</span>
       </article>
-      <article>
-        <nav><input type="text" /></nav>
-        <div>
+      <article class="hero__searcher">
+        <label for="text">
+          <div class="hero__input">
+            <span class="search"
+              ><svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="var(--gray)"
+              >
+                <path
+                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+                ></path>
+              </svg>
+            </span>
+            <input id="text" type="text" />
+            <span class="microphone">
+              <svg
+                class="HPVvwb"
+                focusable="false"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z"
+                  fill="#4285f4"
+                ></path>
+                <path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path>
+                <path
+                  d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"
+                  fill="#f4b400"
+                ></path>
+                <path
+                  d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z"
+                  fill="#ea4335"
+                ></path>
+              </svg>
+            </span>
+          </div>
+        </label>
+        <div class="hero__button">
           <button>Buscar con Google</button>
           <button>Me siento con suerte</button>
         </div>
       </article>
     </section>
     <footer>
-      <section>
+      <section class="info_container">
         <nav>
-          <ul>
-            <li>
-              <a href="">Sobre Google</a>
-              <a href="">Publicidad</a>
-              <a href="">Negocios</a>
-              <a href="">Cómo funciona la Búsqueda</a>
+          <ul class="info-list">
+            <li class="info-items">
+              <a class="info-link" href="">Sobre Google</a>
+            </li>
+            <li class="info-items">
+              <a class="info-link" href="">Publicidad</a>
+            </li>
+            <li class="info-items">
+              <a class="info-link" href="">Negocios</a>
+            </li>
+            <li class="info-items">
+              <a class="info-link" href="">Cómo funciona la Búsqueda</a>
             </li>
           </ul>
         </nav>
       </section>
-      <section>
+      <section class="terms_container">
         <nav>
-          <ul>
-            <li>
-              <a href="">Privacidad</a>
-              <a href="">Condiciones</a>
-              <a href="">Referencias</a>
+          <ul class="terms-list">
+            <li class="terms-item">
+              <a class="terms-link" href="">Privacidad</a>
+              <a class="terms-link" href="">Condiciones</a>
+              <a class="terms-link" href="">Referencias</a>
             </li>
           </ul>
         </nav>
       </section>
-    </footer> -->
+    </footer>
   </body>
 </html>
