modifique el hero e imagen del header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./stylos.css" />
+    <link
+      rel="stylesheet"
+      href="./media/Tablet.css"
+      media="(min-width:500px)"
+    />
+    <link
+      rel="stylesheet"
+      href="./media/Destock.css"
+      media="(min-width:640px)"
+    />
+    <link
+      rel="stylesheet"
+      href="./media/Destockbig.css"
+      media="(min-width:955px)"
+    />
     <title>Google</title>
   </head>
   <body>
@@ -11,10 +26,14 @@
       <nav class="accesos">
         <ul class="accesos__list">
           <li class="accesos__items">
-            <a class="accesos__links" href="">Gmail</a>
+            <a class="accesos__links" href="https://mail.google.com/">Gmail</a>
           </li>
           <li class="accesos__items">
-            <a class="accesos__links" href="">Imágen</a>
+            <a
+              class="accesos__links"
+              href="https://www.google.com.ar/imghp?hl=es&tab=ri&ogbl"
+              >Imágenes</a
+            >
           </li>
           <li class="accesos__items">
             <a class="accesos__links" href="">
@@ -34,7 +53,10 @@
           </li>
           <li class="accesos__items">
             <div class="accesos__items-image">
-              <span></span>
+              <img
+                src="https://lh3.googleusercontent.com/ogw/ADGmqu-MxzAPZvfF9na-c5_zqrWQWJu1ZnAxFTNSYOWMJ38=s32-c-mo"
+                alt=""
+              />
             </div>
           </li>
         </ul>
@@ -42,12 +64,10 @@
     </header>
     <section class="hero">
       <article class="hero__title">
-        <span class="one">G</span>
-        <span class="two">o</span>
-        <span class="three">o</span>
-        <span class="four">g</span>
-        <span class="five">l</span>
-        <span class="six">e</span>
+        <img
+          src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
+          alt=""
+        />
       </article>
       <article class="hero__searcher">
         <label for="text">
@@ -117,9 +137,13 @@
       <section class="terms_container">
         <nav>
           <ul class="terms-list">
-            <li class="terms-item">
+            <li class="terms-items">
               <a class="terms-link" href="">Privacidad</a>
+            </li>
+            <li class="terms-items">
               <a class="terms-link" href="">Condiciones</a>
+            </li>
+            <li class="terms-items">
               <a class="terms-link" href="">Referencias</a>
             </li>
           </ul>
